Resize to fix images to upload maximun width of 1024px and show on iOS

--- a/app/assets/stylesheets/application/document.sass
+++ b/app/assets/stylesheets/application/document.sass
@@ -89,15 +89,15 @@ form
     line-height: 50px
 
 .home_project
-  width: 100%
   height: 550px
   position: relative
   background-position: center top
   background-repeat: no-repeat
   background-attachment: fixed
-  border-bottom: $border
-  &:first-child
-    border-top: $border
+  +background-size(cover)
+  border-top: $border
+  &:last-child
+    border-bottom: $border
   .project_title
     position: absolute
     top: 0
@@ -124,7 +124,6 @@ form
     border: 2px solid gray
 
   @media (min-width: 700px)
-    +background-size(cover)
     .project_chart
       display: block
 
